# xew

./: CMakeLists.txt  LICENSE  README
auto/: auto.py  module.template.c  module.template.h
example/: example_x11.c  example_xcb.c  example_xkbcommon.c
include/: xew.h  xew_x11.h  xew_x11_xcursor.h  xew_x11_xinerama.h  xew_xcb.h  xew_xkbcommon.h
source/: xew.c  xew_util.c  xew_util.h  xew_x11.c  xew_xcb.c  xew_xkbcommon.c
